fixed language string

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -306,6 +306,8 @@ pocketmine.server.query.running=GS4 Query listener running on {%0}:{%1}
 pocketmine.server.start=Starting Minecraft: Bedrock Edition server version {%0}
 pocketmine.server.startFinished=Done ({%0}s)! For help, type "help" or "?"
 pocketmine.server.tickOverload=Can't keep up! Is the server overloaded?
+pocketmine.command.reload.reloaded=Reloaded server.
+pocketmine.command.reload.reloading=Reloading server...
 
 ; -------------------- PocketMine setup-wizard strings, only for console --------------------
 
