--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -297,9 +297,9 @@ pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}
 pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
-pocketmine.server.info.extended=This server is running {%0} {%1} for Minecraft: Bedrock Edition {%2} (protocol version {%3})
-pocketmine.server.donate=If you find this project useful, please consider donating to support development: {%0}
-pocketmine.server.info=This server is running {%0} version {%1}
+pocketmine.server.info.extended=This server is running {%0} {%1} , codename (Aqua) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
+pocketmine.server.donate=Thank you for using UNWServerSoftware, you can find ways to contribute/donate in: github.com/CuongZ/UNWDelicatedSoftware/README.md
+pocketmine.server.info=This server is running {%0} version {%1} codename (Aqua)
 pocketmine.server.license={%0} is distributed under the LGPL License
 pocketmine.server.networkStart=Minecraft network interface running on {%0}:{%1}
 pocketmine.server.query.running=GS4 Query listener running on {%0}:{%1}
