updated Language based on pure Pocketmine

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -22,18 +22,21 @@ commands.banip.usage=/ban-ip <address|name> [reason ...]
 commands.banlist.ips=There are {%0} total banned IP addresses:
 commands.banlist.players=There are {%0} total banned players:
 commands.banlist.usage=/banlist [ips|players]
+pocketmine.plugin.ambiguousMinAPI=Multiple minimum API versions found for some major versions ({%0})
 commands.defaultgamemode.success=The world's default game mode is now {%0}
 commands.defaultgamemode.usage=/defaultgamemode <mode>
 commands.deop.success=De-opped {%0}
 commands.deop.usage=/deop <player>
 commands.difficulty.success=Set game difficulty to {%0}
 commands.difficulty.usage=/difficulty <new difficulty>
+commands.message.display.incoming={%0} whispers to you: {%1}
+commands.message.display.outgoing=You whisper to {%0}: {%1}
 commands.effect.failure.notActive.all=Couldn't take any effects from {%0} as they do not have any
 commands.effect.failure.notActive=Couldn't take {%0} from {%1} as they do not have the effect
 commands.effect.notFound=There is no such mob effect with ID {%0}
 commands.effect.success.removed.all=Took all effects from {%0}
 commands.effect.success.removed=Took {%0} from {%1}
-commands.effect.success=Given {%0} * {%1} to {%2} for {%3} seconds
+commands.effect.success=Given {%0} (ID {%4}) * {%1} to {%2} for {%3} seconds
 commands.effect.usage=/effect <player> <effect> [seconds] [amplifier] [hideParticles] OR /effect <player> clear
 commands.enchant.noItem=The target does not hold an item
 commands.enchant.notFound=There is no such enchantment with ID {%0}
@@ -60,8 +63,6 @@ commands.kill.successful=Killed {%0}
 commands.me.usage=/me <action ...>
 commands.message.sameTarget=You can't send a private message to yourself!
 commands.message.usage=/tell <player> <private message ...>
-commands.message.display.incoming={%0} whispers to you: {%1}
-commands.message.display.outgoing=You whisper to {%0}: {%1}
 commands.op.success=Opped {%0}
 commands.op.usage=/op <player>
 commands.particle.notFound=Unknown effect name {%0}
@@ -208,6 +209,10 @@ pocketmine.command.particle.usage=/particle <name> <x> <y> <z> <xd> <yd> <zd> [c
 pocketmine.command.plugins.description=Gets a list of plugins running on the server
 pocketmine.command.plugins.success=Plugins ({%0}): {%1}
 pocketmine.command.plugins.usage=/plugins
+pocketmine.command.reload.description=Reloads the server configuration and plugins
+pocketmine.command.reload.reloaded=Reload complete.
+pocketmine.command.reload.reloading=Reloading server...
+pocketmine.command.reload.usage=/reload
 pocketmine.command.save.description=Saves the server to disk
 pocketmine.command.saveoff.description=Disables server autosaving
 pocketmine.command.saveon.description=Enables server autosaving
@@ -265,7 +270,6 @@ pocketmine.player.invalidMove={%0} moved wrongly!
 pocketmine.player.logIn={%0}[/{%1}:{%2}] logged in with entity id {%3} at ({%4}, {%5}, {%6}, {%7})
 pocketmine.player.logOut={%0}[/{%1}:{%2}] logged out due to {%3}
 pocketmine.plugin.aliasError=Could not load alias {%0} for plugin {%1}
-pocketmine.plugin.ambiguousMinAPI=Multiple minimum API versions found for some major versions ({%0})
 pocketmine.plugin.circularDependency=Circular dependency detected
 pocketmine.plugin.commandError=Could not load command {%0} for plugin {%1}
 pocketmine.plugin.deprecatedEvent=Plugin '{%0}' has registered a listener for '{%1}' on method '{%2}', but the event is Deprecated.
@@ -297,17 +301,18 @@ pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}
 pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
-pocketmine.server.info.extended=This server is running {%0} {%1} , codename (Aqua) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
-pocketmine.server.donate=Thank you for using UNWServerSoftware, you can find ways to contribute/donate in: github.com/CuongZ/UNWDelicatedSoftware/README.md
-pocketmine.server.info=This server is running {%0} version {%1} codename (Aqua)
+pocketmine.server.info.extended=This server is running {%0} {%1} , codename ( Bomman ) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
+pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/CuongZ/UNWDS/README.md
+pocketmine.server.info=This server is running {%0} version {%1} codename ( Bomman )
 pocketmine.server.license={%0} is distributed under the LGPL License
-pocketmine.server.networkStart=Minecraft network interface running on {%0}:{%1}
-pocketmine.server.query.running=GS4 Query listener running on {%0}:{%1}
-pocketmine.server.start=Starting Minecraft: Bedrock Edition server version {%0}
+pocketmine.server.networkError=[Network] Stopped interface {%0} due to {%1}
+pocketmine.server.networkStart=Opening server on {%0}:{%1}
+pocketmine.server.query.info=Setting query port to {%0}
+pocketmine.server.query.running=Query running on {%0}:{%1}
+pocketmine.server.query.start=Starting GS4 status listener
+pocketmine.server.start=Starting Minecraft: Bedrock Edition server version {%0}, based on UNWDS
 pocketmine.server.startFinished=Done ({%0}s)! For help, type "help" or "?"
 pocketmine.server.tickOverload=Can't keep up! Is the server overloaded?
-pocketmine.command.reload.reloaded=Reloaded server.
-pocketmine.command.reload.reloading=Reloading server...
 
 ; -------------------- PocketMine setup-wizard strings, only for console --------------------
 
@@ -331,10 +336,15 @@ port_warning = Do not change the default port value if this is your first server
 query_disable = Do you want to disable Query?
 query_warning1 = Query is a protocol used by different tools to get information of your server and players logged in.
 query_warning2 = If you disable it, you won't be able to use server lists.
+rcon_enable = Do you want to enable RCON?
+rcon_info = RCON is a protocol to remote connect with the server console using a password.
+rcon_password = RCON password (you can change it later)
 server_port = Server port
 server_properties = You can edit them later on the server.properties file.
 setting_up_server_now = You are going to set up your server now.
 skip_installer = Do you want to skip the set-up wizard?
+spawn_protection = Enable spawn protection?
+spawn_protection_info = The spawn protection disallows placing/breaking blocks in the spawn zone except for OPs
 welcome_to_pocketmine = Welcome to {%0}!\nBefore starting setting up your new server you have to accept the license.\n{%0} is licensed under the LGPL License,\nthat you can read opening the LICENSE file on this folder.
 whitelist_enable = Do you want to enable the white-list?
 whitelist_info = The white-list only allows players in it to join.
