--- a/src/pocketmine/lang/locale/vie.ini
+++ b/src/pocketmine/lang/locale/vie.ini
@@ -1,4 +1,4 @@
-; Language file compatible with Minecraft: Bedrock Edition identifiers
+﻿; Language file compatible with Minecraft: Bedrock Edition identifiers
 ;
 ; A message doesn't need to be there to be shown correctly on the client.
 ; Only messages shown in PocketMine itself need to be here
@@ -6,49 +6,103 @@
 language.name=Tiếng Việt
 language.selected=Chọn {%0} ({%1}) là ngôn ngữ chính
 
+ability.flight=Bay
+ability.flight=Xuyên vật thể
 chat.type.achievement={%0} vừa đạt được danh hiệu {%1}
 chat.type.admin=[{% 0}: {%}] {%1}]}
 chat.type.announcement=[{%0}] {%1}
 chat.type.emote=* {%0} {%1}
 chat.type.text=<{%0}> {%1}
-commands.ban.success=Cấm người chơi {%0}
+commands.ban.success=Đã cấm người chơi {%0}
 commands.ban.usage=/ban <Tên Player> [Lý do..]
 commands.banip.invalid=Bạn đã nhập sai IP hoặc người chơi đó không trực tuyến
 commands.banip.success.players=Cấm địa chỉ IP {%0} của {%1}
 commands.banip.success=Cấm địa chỉ IP {%0}
 commands.banlist.ips=Có tất cả %d địa chỉ IP bị cấm:
 commands.banlist.players=Có tất cả {%0} người chơi bị cấm:
+commands.banlist.usage=/banlist [IP|Người chơi]
+pocketmine.plugin.ambiguousMinAPI=Đa phiên bản API thấp nhất được tìm thấy cho một vài phiên bản chính ({%0})
 commands.defaultgamemode.success=Chế độ mặc định là {%0}
+commands.defaultgamemode.usage=/defaultgamemode <chế độ>
 commands.deop.success=Bãi nhiệm {%0}
 commands.deop.usage=/deop <Tên nvật>
+commands.difficulty.success=Đặt độ khó của trò chơi là {%0}
+commands.difficulty.usage=/difficulty <độ khó>
+commands.message.display.incoming={%0} gửi lời nhắn đến bạn: {%1}
+commands.message.display.outgoing=Đã gửi lời nhắn cho {%0}: {%1}
 commands.effect.failure.notActive.all=Không thể loại hiệu ứng nào từ {%0} vì họ không có
 commands.effect.failure.notActive=Không thể loại {%0} khỏi {%1} vì họ không có hiệu ứng
-commands.effect.notFound=Không có hiệu ứng ID {%0}
+commands.effect.notFound=Không có hiệu ứng với ID {%0}
 commands.effect.success.removed.all=Loại bỏ tất cả hiệu ứng khỏi {%0}
 commands.effect.success.removed=Loại bỏ {%0} khỏi {%1}
+commands.effect.success=Đã giao {%0} (ID {%4}) * {%1} tới {%2} trong {%3} giây
+commands.effect.usage=/effect <tên người chơi> <hiệu ứng> [giây] [amplifier] [hideParticles] hoặc /effect <tên người chơi> clear
+commands.enchant.noItem=Đối tượng đang không cầm một đồ vật gì
+commands.enchant.notFound=Không có hiệu ứng phù phép với ID {%0}
+commands.enchant.success=Phù phép thành công
+commands.enchant.usage=/enchant <tên người chơi> <ID phù phép> [cấp]
+commands.gamemode.success.other=Đặt chế độ chơi của {%1} thành {%0}
+commands.gamemode.success.self=Đặt chế độ chơi của bản thân là {%0}
+commands.gamemode.usage=/gamemode <chế độ chơi> [tên người chơi]
 commands.generic.notFound=Lệnh không tìm thấy. Nhập /help để xem danh sách lệnh
+commands.generic.num.tooBig=Số bạn đã nhập ({%0}) là quá lớn, số lớn nhất được cho phép là {%1}
+commands.generic.num.tooSmall=Số bạn đã nhập ({%0}) là quá nhỏ, số nhỏ nhất được cho phép là {%1}
 commands.generic.permission=Bạn không có quyền sử dụng câu lệnh này
 commands.generic.player.notFound=Không thể tìm thấy người chơi này
 commands.generic.usage=Sử dụng: {%0}
 commands.give.item.notFound=Không có vật phẩm tên {%0}
 commands.give.success=Đưa {%0} * {%1} cho {%2}
+commands.give.tagError=Lỗi truyền thẻ dữ liệu: {%0}
+commands.help.header=--- Đang hiển thị trang trợ giúp {%0} trên {%1} (/help <trang>) ---
+commands.help.usage=/help [trang|tên lệnh]
+commands.kick.success.reason=Đã đuổi {%0}, lý do: '{%1}'
+commands.kick.success=Đã đuổi {%0}
+commands.kick.usage=/kick <tên người chơi> [lý do ...]
 commands.kill.successful=Giết {%0}
+commands.me.usage=/me <hành động ...>
+commands.message.sameTarget=Bạn không thể gửi tin nhắn mật cho chính mình!
+commands.message.usage=/tell <tên người chơi> <tin nhắn mật ...>
 commands.op.success=Bổ nhiệm {%0}
-commands.particle.notFound=Không tìm thấy {%0}
+commands.op.usage=/op <tên người chơi>
+commands.particle.notFound=Không tìm thấy hiệu ứng có tên {%0}
 commands.particle.success=Đặt hiệu ứng {%0} trong {%1} lần
 commands.players.list=Hiện có {%0}/{%1} người chơi:
+commands.players.usage=/list
+commands.save-off.usage=/save-off
+commands.save-on.usage=/save-on
+commands.save.disabled=Đã tắt tự động lưu thế giới
+commands.save.enabled=Đã bật tự động lưu thế giới
 commands.save.start=Đang lưu...
 commands.save.success=Đã lưu
+commands.say.usage=/say <tin nhắn ...>
+commands.seed.success=Seed hiện tại: {%0}
+commands.setworldspawn.success=Đặt điểm hồi sinh của thế giới ở ({%0}, {%1}, {%2})
+commands.setworldspawn.usage=/setworldspawn [<x> <y> <z>]
+commands.spawnpoint.success=Đặt điểm hổi sinh của {%0} ở ({%1}, {%2}, {%3})
 commands.spawnpoint.usage=/spawnpoint [Nhân Vật] <x> <y> <z>
 commands.stop.start=Dừng máy chủ
 commands.time.added=Cộng {%0} vào thời gian
 commands.time.query=Thời gian là {%0}
 commands.time.set=Đặt thời gian là {%0}
+commands.title.success=Lệnh tiêu đề đã được thực thi thành công
+commands.title.usage=/title <tên người chơi> <clear|reset|title|subtitle|actionbar|times> ...
 commands.tp.success.coordinates=Dịch chuyển {%0} đến {%1}, {%2}, {%3}
+commands.tp.success=Đã dịch chuyển {%0} tới {%1}
+commands.tp.usage=/tp [tên người chơi mục tiêu] <tên người chơi đích> hoặc /tp [tên người chơi mục tiêu] <x> <y> <z> [<y-rot> <x-rot>]
 commands.unban.success=Huỷ cấm người chơi {%0}
+commands.unban.usage=/pardon <tên người chơi>
 commands.unbanip.invalid=Bạn đã nhập địa chỉ IP không hợp lệ
 commands.unbanip.success=Đã huỷ cấm địa chỉ IP {%0}
 commands.unbanip.usage=/pardon-ip <địa chỉ>
+commands.whitelist.add.success=Đã thêm {%0} vào danh sách trắng
+commands.whitelist.add.usage=/whitelist add <tên người chơi>
+commands.whitelist.disabled=Đã tắt chế độ danh sách trắng, mọi người có thể vào được server
+commands.whitelist.enabled=Đã bật chế độ danh sách trắng, chỉ người trong danh sách mới có thể vào server
+commands.whitelist.list=Có {%0} (gồm {%1} đã xem) người chơi trong danh sách trắng:
+commands.whitelist.reloaded=Đã tải lại danh sách trắng
+commands.whitelist.remove.success=Đã loại {%0} khỏi danh sách trắng
+commands.whitelist.remove.usage=/whitelist remove <tên người chơi>
+commands.whitelist.usage=/whitelist <on|off|list|add|remove|reload>
 death.attack.arrow.item={%0} bị bắn bởi {%1} bằng {%2}
 death.attack.arrow={%0} bị bắn bởi {%1}
 death.attack.cactus={%0} bị đâm chết
@@ -81,6 +135,9 @@ gameMode.changed=Chế độ chơi đã thay đổi
 gameMode.creative=Chế độ sáng tạo
 gameMode.spectator=Chế độ quan sát
 gameMode.survival=Chế độ sinh tồn
+kick.admin.reason=%kick.admin lý do: {%0}
+kick.admin=Đã bị đuổi bởi quản trị viên.
+kick.reason.cheat={%0} không được bật trên server này
 multiplayer.player.joined={%0} tham gia trò chơi
 multiplayer.player.left={%0} rời trò chơi
 pocketmine.disconnect.incompatibleProtocol=Phiên bản không phù hợp: ({%0})
@@ -118,6 +175,128 @@ tile.bed.noSleep=Bạn chỉ có thể ngủ vào ban ngày
 tile.bed.tooFar=Giường ở quá xa
 
 ; -------------------- PocketMine language strings, only for console --------------------
+pocketmine.command.alias.illegal=Không thể đăng kí '{%0}' bởi vì nó chứa ký tự hợp lệ
+pocketmine.command.alias.notFound=Không thể đăng kí '{%0}' bởi vì nó chứa một lệnh không tồn tại: {%1}
+pocketmine.command.alias.recursive=Không thể đăng ký '{%0}' bởi vì nó chứa một lệnh không rõ, không khả dụng: {%1}
+pocketmine.command.ban.ip.description=Chặn địa chỉ IP tham gia vào server này
+pocketmine.command.ban.player.description=Chặn một tên người chơi cụ thể tham gia trò chơi này
+pocketmine.command.banlist.description=Xem tất cả người chơi đã bị cấm
+pocketmine.command.defaultgamemode.description=Đặt chế độ chơi mặc định
+pocketmine.command.deop.description=Lấy lại quyền quản trị của người chơi
+pocketmine.command.difficulty.description=Đặt độ khó của trò chơi
+pocketmine.command.effect.description=Thêm/Xoá bỏ hiệu ứng của người chơi
+pocketmine.command.enchant.description=Thêm phù phép vào đồ vật
+pocketmine.command.exception=Không thể thực thi lệnh, bởi vì có các ngoại trừ: lệnh '{%0}' ở {%1}: {%2}
+pocketmine.command.gamemode.description=Thay đổi chế độ chơi của người chơi
+pocketmine.command.gc.description=Dọn rác
+pocketmine.command.gc.usage=/gc
+pocketmine.command.give.description=Cho một người chơi một số lượng của đồ vật 
+pocketmine.command.give.usage=/give <tên người chơi> <item[:damage]> [số lượng] [tags...]
+pocketmine.command.help.description=Hiển thị các lệnh trợ giúp
+pocketmine.command.kick.description=Đuổi một người chơi cụ thể khỏi server
+pocketmine.command.kill.description=Tự tử hoặc giết 1 người chơi khác
+pocketmine.command.kill.usage=/kill [tên người chơi]
+pocketmine.command.list.description=Liệt kê tất cả người chơi đang hoạt động
+pocketmine.command.me.description=Thực hiện một số hành động ở trong chat
+pocketmine.command.op.description=Cho một người chơi nhất định làm quản trị viên
+pocketmine.command.particle.description=Thêm vào trong thế giới
+pocketmine.command.particle.usage=/particle <tên> <x> <y> <z> <xd> <yd> <zd> [count] [data]
+pocketmine.command.plugins.description=Danh sách những plugin được cài vào trong server
+pocketmine.command.plugins.success=Plugins ({%0}): {%1}
+pocketmine.command.plugins.usage=/plugins
+pocketmine.command.reload.description=Tải lại cấu hình và plugin của server
+pocketmine.command.reload.reloaded=Tải lại hoàn tất.
+pocketmine.command.reload.reloading=Đang tải lại...
+pocketmine.command.reload.usage=/reload
+pocketmine.command.save.description=Lưu server vào đĩa
+pocketmine.command.saveoff.description=Tắt tự động lưu server
+pocketmine.command.saveon.description=Bật tự động lưu server
+pocketmine.command.say.description=Phát thanh tin nhắn
+pocketmine.command.seed.description=Xem seed của thế giới
+pocketmine.command.setworldspawn.description=Đặt điểm hồi sinh của người chơi. Nếu không có toạ độ cụ thể thì sẽ là chỗ người chơi đó đang đứng
+pocketmine.command.spawnpoint.description=Đặt điểm hồi sinh của người chơi
+pocketmine.command.status.description=Tình trạng của server
+pocketmine.command.status.usage=/status
+pocketmine.command.stop.description=Dừng server
+pocketmine.command.tell.description=Gửi một tin nhắn bí mật cho người chơi
+pocketmine.command.time.description=Thay đổi thời gian trong mỗi thế giới
+pocketmine.command.time.usage=/time <set|add> <giá trị> hoặc /time <start|stop|query>
+pocketmine.command.timings.description=Quay lại timings để xem hiệu năng.
+pocketmine.command.timings.disable=Tắt Timings
+pocketmine.command.timings.enable=Bật Timings & Đặt Lại
+pocketmine.command.timings.pasteError=Một lỗi đã xẩy ra
+pocketmine.command.timings.reset=Đặt lại Timings
+pocketmine.command.timings.timingsDisabled=Vui lòng bật timings bằng cách gõ /timings on
+pocketmine.command.timings.timingsRead=Bạn có thể đọc kết quả ở {%0}
+pocketmine.command.timings.timingsUpload=Đã tải timings lên {%0}
+pocketmine.command.timings.timingsWrite=Đã viết timings vào {%0}
+pocketmine.command.timings.usage=/timings <reset|report|on|off|paste>
+pocketmine.command.title.description=Kiểm soát tiêu đề màn hình
+pocketmine.command.tp.description=Dịch chuyển bạn hoặc người chơi đến một toạ độ hoặc người chơi khác
+pocketmine.command.transferserver.description=Chuyển bạn sang một server khác
+pocketmine.command.transferserver.usage=/transferserver <server> [port]
+pocketmine.command.unban.ip.description=Huỷ cấm địa chỉ IP
+pocketmine.command.unban.player.description=Huỷ cấm người chơi
+pocketmine.command.version.description=Lấy thông tin phần mềm UNWDS hiện tại và cả các plugin đã được cài đặt
+pocketmine.command.version.noSuchPlugin=Server này không có plugin này. Dùng /plugins để thấy được những plugin đã cài đặt.
+pocketmine.command.version.usage=/version [tên plugin]
+pocketmine.command.whitelist.description=Quản lý danh sách những người được vào server ( danh sách trắng )
+pocketmine.crash.create=Một lỗi không thể hồi phục đã làm cho server bị đóng, đang tạo bản ghi lỗi
+pocketmine.crash.error=Không thể tạo bản ghi lỗi: {%0}
+pocketmine.crash.submit=Vui lòng tải file báo lỗi "{%0}" tới trang báo lỗi. Đưa ra thông tin càng nhiều càng có thế.
+pocketmine.data.playerCorrupted=Dữ liệu của người chơi "{%0}" bị lỗi, đang tạo một hồ sơ mới
+pocketmine.data.playerNotFound=Dữ liệu của người chơi "{%0}" không tìm thấy, đang tạo một hồ sơ mới
+pocketmine.data.playerOld=Old Đã tìm thấy dữ liệu của người chơi "{%0}", đang nâng cấp hồ sơ của người chơi này
+pocketmine.data.saveError=Không thể lưu dữ liệu của người chơi "{%0}": {%1}
+pocketmine.debug.enable=Đã bật hỗ trợ LevelDB
+pocketmine.level.backgroundGeneration=Đang tạo thế giới "{%0}" trong nền
+pocketmine.level.badDefaultFormat=Loại thế giới để tạo "{%0}" không tồn tại, sử dụng loại mặc định
+pocketmine.level.defaultError=No default world has been loaded
+pocketmine.level.generationError=Could not generate world "{%0}": {%1}
+pocketmine.level.loadError=Could not load world "{%0}": {%1}
+pocketmine.level.notFound=World "{%0}" not found
+pocketmine.level.preparing=Preparing world "{%0}"
+pocketmine.level.unknownFormat=Unknown format
+pocketmine.level.unloading=Unloading world "{%0}"
+pocketmine.player.invalidEntity={%0} tried to attack an invalid entity
+pocketmine.player.invalidMove={%0} moved wrongly!
+pocketmine.player.logIn={%0}[/{%1}:{%2}] logged in with entity id {%3} at ({%4}, {%5}, {%6}, {%7})
+pocketmine.player.logOut={%0}[/{%1}:{%2}] logged out due to {%3}
+pocketmine.plugin.aliasError=Could not load alias {%0} for plugin {%1}
+pocketmine.plugin.circularDependency=Circular dependency detected
+pocketmine.plugin.commandError=Could not load command {%0} for plugin {%1}
+pocketmine.plugin.deprecatedEvent=Plugin '{%0}' has registered a listener for '{%1}' on method '{%2}', but the event is Deprecated.
+pocketmine.plugin.disable=Disabling {%0}
+pocketmine.plugin.duplicateError=Could not load plugin '{%0}': plugin exists
+pocketmine.plugin.enable=Enabling {%0}
+pocketmine.plugin.fileError=Could not load '{%0}' in folder '{%1}': {%2}
+pocketmine.plugin.genericLoadError=Could not load plugin '{%0}'
+pocketmine.plugin.incompatibleAPI=Incompatible API version (plugin requires one of: {%0})
+pocketmine.plugin.incompatibleProtocol=Incompatible network protocol version (plugin requires one of: {%0})
+pocketmine.plugin.load=Loading {%0}
+pocketmine.plugin.loadError=Could not load plugin '{%0}': {%1}
+pocketmine.plugin.restrictedName=Restricted name
+pocketmine.plugin.spacesDiscouraged=Plugin '{%0}' uses spaces in its name, this is discouraged
+pocketmine.plugin.unknownDependency=Unknown dependency: {%0}
+pocketmine.save.start=Saving server data...
+pocketmine.save.success=Save completed in {%0} seconds
+pocketmine.server.auth.disabled=Online mode is disabled. The server will not verify that players are authenticated to Xbox Live.
+pocketmine.server.auth.enabled=Online mode is enabled. The server will verify that players are authenticated to Xbox Live.
+pocketmine.server.authProperty.disabled=To enable authentication, set "xbox-auth" to "true" in server.properties.
+pocketmine.server.authProperty.enabled=To disable authentication, set "xbox-auth" to "false" in server.properties.
+pocketmine.server.authWarning=While this makes it possible to connect without internet access, it also allows hackers to connect with any username they choose.
+pocketmine.server.defaultGameMode=Default game type: {%0}
+pocketmine.server.devBuild.error1=You are running a {%0} DEVELOPMENT build, but your configuration does not permit running development builds.
+pocketmine.server.devBuild.error2=Development builds might have unexpected bugs, crash, break your plugins, corrupt all your data and more.
+pocketmine.server.devBuild.error3=Unless you're a developer and know what you're doing, please AVOID using development builds.
+pocketmine.server.devBuild.error4=To use this build anyway, set "{%0}" to "true" in your pocketmine.yml.
+pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}.
+pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
+pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
+pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
+pocketmine.server.info.extended=This server is running {%0} {%1} , codename ( Bomman ) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
+pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/CuongZ/UNWDS/README.md
+pocketmine.server.info=This server is running {%0} version {%1} codename ( Bomman )
 pocketmine.server.defaultGameMode=Loại trò chơi mặc định: {%0}
 pocketmine.server.license={%0} được phát hành dưới bản quyền LGPL
 pocketmine.server.networkError=[Network] Ngưng {%0} vì {%1}
@@ -135,7 +314,7 @@ default_gamemode=Chế độ mặc định
 default_values_info=Nếu bạn không muốn đổi giá trị mặc định, nhấn Enter.
 gamemode_info=Chọn Creative (1) hoặc Survival (0)
 invalid_port=Server port không đúng
-language_has_been_selected=Tiếng Anh đã được chọn.
+language_has_been_selected=Tiếng Việt đã được chọn.
 max_players=Giới hạn lượng người chơi
 name_your_server=Đặt tên server
 op_info=OP là chủ/quản lí server. OPs có nhiều quyền hạn hơn người thường
