--- a/src/pocketmine/lang/locale/vie.ini
+++ b/src/pocketmine/lang/locale/vie.ini
@@ -1,7 +1,9 @@
-﻿; Language file compatible with Minecraft: Bedrock Edition identifiers
+﻿; UNWDS language file ( Vietnamese )
+; Translator: CuongZ
+; Language file compatible with Minecraft: Bedrock Edition identifiers
 ;
 ; A message doesn't need to be there to be shown correctly on the client.
-; Only messages shown in PocketMine itself need to be here
+; Only messages shown in UNWDS itself need to be here
 
 language.name=Tiếng Việt
 language.selected=Chọn {%0} ({%1}) là ngôn ngữ chính
@@ -251,41 +253,41 @@ pocketmine.data.saveError=Không thể lưu dữ liệu của người chơi "{%
 pocketmine.debug.enable=Đã bật hỗ trợ LevelDB
 pocketmine.level.backgroundGeneration=Đang tạo thế giới "{%0}" trong nền
 pocketmine.level.badDefaultFormat=Loại thế giới để tạo "{%0}" không tồn tại, sử dụng loại mặc định
-pocketmine.level.defaultError=No default world has been loaded
-pocketmine.level.generationError=Could not generate world "{%0}": {%1}
-pocketmine.level.loadError=Could not load world "{%0}": {%1}
-pocketmine.level.notFound=World "{%0}" not found
-pocketmine.level.preparing=Preparing world "{%0}"
-pocketmine.level.unknownFormat=Unknown format
-pocketmine.level.unloading=Unloading world "{%0}"
-pocketmine.player.invalidEntity={%0} tried to attack an invalid entity
-pocketmine.player.invalidMove={%0} moved wrongly!
-pocketmine.player.logIn={%0}[/{%1}:{%2}] logged in with entity id {%3} at ({%4}, {%5}, {%6}, {%7})
-pocketmine.player.logOut={%0}[/{%1}:{%2}] logged out due to {%3}
-pocketmine.plugin.aliasError=Could not load alias {%0} for plugin {%1}
-pocketmine.plugin.circularDependency=Circular dependency detected
-pocketmine.plugin.commandError=Could not load command {%0} for plugin {%1}
-pocketmine.plugin.deprecatedEvent=Plugin '{%0}' has registered a listener for '{%1}' on method '{%2}', but the event is Deprecated.
-pocketmine.plugin.disable=Disabling {%0}
-pocketmine.plugin.duplicateError=Could not load plugin '{%0}': plugin exists
-pocketmine.plugin.enable=Enabling {%0}
-pocketmine.plugin.fileError=Could not load '{%0}' in folder '{%1}': {%2}
-pocketmine.plugin.genericLoadError=Could not load plugin '{%0}'
-pocketmine.plugin.incompatibleAPI=Incompatible API version (plugin requires one of: {%0})
-pocketmine.plugin.incompatibleProtocol=Incompatible network protocol version (plugin requires one of: {%0})
-pocketmine.plugin.load=Loading {%0}
-pocketmine.plugin.loadError=Could not load plugin '{%0}': {%1}
-pocketmine.plugin.restrictedName=Restricted name
-pocketmine.plugin.spacesDiscouraged=Plugin '{%0}' uses spaces in its name, this is discouraged
-pocketmine.plugin.unknownDependency=Unknown dependency: {%0}
-pocketmine.save.start=Saving server data...
-pocketmine.save.success=Save completed in {%0} seconds
-pocketmine.server.auth.disabled=Online mode is disabled. The server will not verify that players are authenticated to Xbox Live.
-pocketmine.server.auth.enabled=Online mode is enabled. The server will verify that players are authenticated to Xbox Live.
-pocketmine.server.authProperty.disabled=To enable authentication, set "xbox-auth" to "true" in server.properties.
-pocketmine.server.authProperty.enabled=To disable authentication, set "xbox-auth" to "false" in server.properties.
-pocketmine.server.authWarning=While this makes it possible to connect without internet access, it also allows hackers to connect with any username they choose.
-pocketmine.server.defaultGameMode=Default game type: {%0}
+pocketmine.level.defaultError=Không một thế giới mặc định nào được chọn, đang tạo mới
+pocketmine.level.generationError=Không thể tạo thế giơi "{%0}": {%1}
+pocketmine.level.loadError=Không thể tải thế giới "{%0}": {%1}
+pocketmine.level.notFound=Thế giới "{%0}" không tìm thấy
+pocketmine.level.preparing=Đang chuẩn bị thế giới "{%0}"
+pocketmine.level.unknownFormat=Phân loại không rõ
+pocketmine.level.unloading=Đang huỷ tải thế giới "{%0}"
+pocketmine.player.invalidEntity={%0} cố gắng tấn công một thực thể không rõ
+pocketmine.player.invalidMove={%0} di chuyển không hợp lệ!
+pocketmine.player.logIn={%0}[/{%1}:{%2}] đã đăng nhập với ID {%3} tại ({%4}, {%5}, {%6}, {%7})
+pocketmine.player.logOut={%0}[/{%1}:{%2}] đã thoát vì {%3}
+pocketmine.plugin.aliasError=Không thể tải {%0} cho plugin {%1}
+pocketmine.plugin.circularDependency=Phát hiện phụ thuộc thông tư
+pocketmine.plugin.commandError=Không thể tải lệnh {%0} cho plugin {%1}
+pocketmine.plugin.deprecatedEvent=Plugin '{%0}' đã đăng ký người nghe cho '{%1}' trên phương thức '{%2}', nhưng sự kiện không được chấp nhận
+pocketmine.plugin.disable=Đang huỷ kích hoạt {%0}
+pocketmine.plugin.duplicateError=Không thể tải plugin '{%0}': plugin đã có rồi
+pocketmine.plugin.enable=Đang bật {%0}
+pocketmine.plugin.fileError=Không thể tải '{%0}' trong thư mục '{%1}': {%2}
+pocketmine.plugin.genericLoadError=Không thể tải plugin '{%0}'
+pocketmine.plugin.incompatibleAPI=Phiên bản API không phù hợp (plugin yêu cầu: {%0})
+pocketmine.plugin.incompatibleProtocol=Phiên bản phương thức mạng không phù hợp (plugin yêu cầu: {%0})
+pocketmine.plugin.load=Đang tải {%0}
+pocketmine.plugin.loadError=Không thể tải plugin '{%0}': {%1}
+pocketmine.plugin.restrictedName=Tên bị cấm
+pocketmine.plugin.spacesDiscouraged=Plugin '{%0}' dùng khoảng cách, đây là điều không nên
+pocketmine.plugin.unknownDependency=Phụ thuộc không xác định: {%0}
+pocketmine.save.start=Đang lưu dữ liệu server...
+pocketmine.save.success=Lưu hoàn tất trong {%0} giây
+pocketmine.server.auth.disabled=Chế độ trực tuyến bị vô hiệu hóa. Máy chủ sẽ không xác minh rằng người chơi được xác thực với Xbox Live.
+pocketmine.server.auth.enabled=Chế độ trực tuyến được bật. Máy chủ sẽ xác minh rằng người chơi được xác thực với Xbox Live.
+pocketmine.server.authProperty.disabled=Để bật chế độ xác thực, đặt "xbox-auth" thành "true" trong server.properties.
+pocketmine.server.authProperty.enabled=Để tắt chế độ xác thực, đặt "xbox-auth" thành "false" trong server.properties.
+pocketmine.server.authWarning=Mặc dù điều này cho phép kết nối mà không cần truy cập internet, nhưng nó cũng cho phép tin tặc kết nối với bất kỳ tên người dùng nào họ chọn.
+pocketmine.server.defaultGameMode=Chế độ trò chơi mặc định: {%0}
 pocketmine.server.devBuild.error1=You are running a {%0} DEVELOPMENT build, but your configuration does not permit running development builds.
 pocketmine.server.devBuild.error2=Development builds might have unexpected bugs, crash, break your plugins, corrupt all your data and more.
 pocketmine.server.devBuild.error3=Unless you're a developer and know what you're doing, please AVOID using development builds.
@@ -294,39 +296,54 @@ pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}
 pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
-pocketmine.server.info.extended=This server is running {%0} {%1} , codename ( Bomman ) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
-pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/CuongZ/UNWDS/README.md
-pocketmine.server.info=This server is running {%0} version {%1} codename ( Bomman )
-pocketmine.server.defaultGameMode=Loại trò chơi mặc định: {%0}
-pocketmine.server.license={%0} được phát hành dưới bản quyền LGPL
-pocketmine.server.networkError=[Network] Ngưng {%0} vì {%1}
-pocketmine.server.networkStart=Thiết lập máy chủ trên {%0}:{%1}
-pocketmine.server.query.info=Đặt cổng truy vấn là {%0}
-pocketmine.server.query.running=Địa chỉ truy vấn là {%0}:{%1}
-pocketmine.server.query.start=Chạy GS4 status listener
-pocketmine.server.startFinished=Xong({%0}s)! Để trợ giúp, nhập "help" hoặc "?"
-pocketmine.server.tickOverload=Không thể tiếp tục! Máy chủ bị quá tải?
+pocketmine.server.info.extended=Server này đang chạy {%0} bởi CuongZ, phiên bản {%1} , tên mã ( Bomman ) cho Minecraft: Bedrock Edition {%2} (phiên bản protocol {%3})
+pocketmine.server.donate = Cảm ơn bạn đã sử dụng UNWDS, bạn có thể đóng góp tại : github.com/CuongZ/UNWDS/README.md
+pocketmine.server.info = Server này đang chạy {%0} phiên bản {%1} tên mã ( Bomman )
+pocketmine.server.start = Đang chạy UNWDS dành cho Minecraft: Bedrock Edition phiên bản {%0}
+pocketmine.server.defaultGameMode = Loại trò chơi mặc định: {%0}
+pocketmine.server.license = {%0} được phát hành dưới bản quyền LGPL
+pocketmine.server.networkError = [Network] Ngưng {%0} vì {%1}
+pocketmine.server.networkStart = Thiết lập máy chủ trên {%0}:{%1}
+pocketmine.server.query.info = Đặt cổng truy vấn là {%0}
+pocketmine.server.query.running = Địa chỉ truy vấn là {%0}:{%1}
+pocketmine.server.query.start = Chạy GS4 status listener
+pocketmine.server.startFinished = Xong({%0}s)! Để trợ giúp, nhập "help" hoặc "?"
+pocketmine.server.tickOverload = Không thể tiếp tục! Máy chủ bị quá tải?
 
 ; -------------------- PocketMine setup-wizard strings, only for console --------------------
-
 accept_license=Bạn có chấp nhận hợp đồng ?
 default_gamemode=Chế độ mặc định
 default_values_info=Nếu bạn không muốn đổi giá trị mặc định, nhấn Enter.
 gamemode_info=Chọn Creative (1) hoặc Survival (0)
 invalid_port=Server port không đúng
+ip_confirm = Hãy chắc chắn kiểm tra nó, nếu bạn phải chuyển tiếp và bạn bỏ qua điều đó, sẽ không có người chơi bên ngoài nào có thể tham gia. [Ấn Enter]
+ip_get = Nhận IP bên ngoài và IP nội bộ của bạn
+ip_warning = IP bên ngoài của bạn là {%EXTERNAL_IP}. Bạn có thể phải chuyển tiếp tới IP nội bộ của mình là {%INTERNAL_IP}
 language_has_been_selected=Tiếng Việt đã được chọn.
 max_players=Giới hạn lượng người chơi
 name_your_server=Đặt tên server
 op_info=OP là chủ/quản lí server. OPs có nhiều quyền hạn hơn người thường
 op_warning=Bạn có thể thêm OP bằng lệnh /op <player>
 op_who=Tên OP (ví dụ, tên bạn)
+pocketmine_plugins = Kiểm tra Kho lưu trữ Plugin để thêm các tính năng mới, minigame hoặc bảo vệ nâng cao cho máy chủ của bạn
+pocketmine_will_start = {%0} sẽ khởi đọng. Gõ /help để xem các lệnh khả dụng.
 port_warning=Không được đổi giá trị port mặc định nếu đây là server đầu tiên của bạn.
+query_disable = Bạn có muốn tắt Query?
+query_warning1 = Query là một giao thức được sử dụng bởi các công cụ khác nhau để lấy thông tin về máy chủ và người chơi của bạn đã đăng nhập.
+query_warning2 = Nếu bạn tắt nó, bạn sẽ không thể sử dụng danh sách máy chủ.
+rcon_enable = Bạn có muốn bật RCON?
+rcon_info = RCON là một giao thức để kết nối từ xa với bảng điều khiển máy chủ bằng mật khẩu.
+rcon_password = Mật khẩu RCON (bạn có thể thay đổi nó sau)
+server_port = Cổng Server
 server_properties=Bạn có thể chỉnh sửa lại vào file server.properties .
 setting_up_server_now=Bạn sẽ bắt đầu set up server của bạn ngay.
 skip_installer=Bạn có muốn bỏ qua hướng dẫn set-up?
-spawn_protection=Mở Spawn protection?
-spawn_protection_info=Spawn protection không cho phép đặt/đập trong khu vực hồi sinh trừ OPs
+spawn_protection = Mở Spawn protection?
+spawn_protection_info = Spawn protection không cho phép đặt/đập trong khu vực hồi sinh trừ OPs
+welcome_to_pocketmine = Chào mừng bạn đến với {%0}!\nTrước khi bắt đầu thiết lập máy chủ mới của bạn, bạn phải chấp nhận giấy phép.\n{%0} được cấp phép theo Giấy phép LGPL, bạn có thể đọc mở tệp LICENSE trên thư mục này.
 whitelist_enable=Bạn có muốn bật white-list?
 whitelist_info=White-list chỉ cho người có phép của quản lí tham gia.
 whitelist_warning=Bạn sẽ phải thêm người chơi vào white-list
+you_have_finished = Bạn đã hoàn thành thuật sĩ thiết lập thành công
+you_have_to_accept_the_license = Bạn phải chấp nhận giấy phép LGPL để tiếp tục sử dụng {%0}
 
