Update language files: vie.ini

--- a/src/pocketmine/lang/locale/vie.ini
+++ b/src/pocketmine/lang/locale/vie.ini
@@ -296,9 +296,9 @@ pocketmine.server.devBuild.error5=Để tải các bản xây dựng ổn địn
 pocketmine.server.devBuild.warning1=Bạn đang sử dụng phiên bản xây dựng THỬ NGHIỆM của {%0}
 pocketmine.server.devBuild.warning2=Phiên bản API này có thể không hoàn chỉnh. Các plugin chạy được trên API này có thể không chạy được trên các phiên bản khác.
 pocketmine.server.devBuild.warning3=Phiên bản xây dựng thử nghiệm có thể sẽ có lỗi không thể lường trước được, có thể nó sẽ làm hỏng thế giới, dữ liệu và các plugin hoạt động không đúng cách.
-pocketmine.server.info.extended=Server này đang chạy {%0} bởi dtcu0ng, phiên bản {%1} , tên mã (Reborn) cho Minecraft: Bedrock Edition {%2} (phiên bản protocol {%3})
+pocketmine.server.info.extended=Server này đang chạy {%0} {%1}, phiên bản {%2} cho Minecraft: Bedrock Edition {%3} (phiên bản protocol {%4})
 pocketmine.server.donate = Cảm ơn bạn đã sử dụng UNWDS, bạn có thể đóng góp tại : github.com/dtcu0ng/UNWDS/README.md
-pocketmine.server.info = Server này đang chạy {%0} phiên bản {%1} tên mã (Reborn)
+pocketmine.server.info = Server này đang chạy {%0} {%1}
 pocketmine.server.start = Đang chạy UNWDS dành cho Minecraft: Bedrock Edition phiên bản {%0}
 pocketmine.server.defaultGameMode = Loại trò chơi mặc định: {%0}
 pocketmine.server.license = {%0} được phát hành dưới bản quyền LGPL
