Update language files: eng.ini

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -1,4 +1,4 @@
-﻿; Language file compatible with Minecraft: Bedrock Edition identifiers
+; Language file compatible with Minecraft: Bedrock Edition identifiers
 ;
 ; A message doesn't need to be there to be shown correctly on the client.
 ; Only messages shown in UNWDS itself need to be here
@@ -301,9 +301,9 @@ pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}
 pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
-pocketmine.server.info.extended=This server is running {%0} by dtcu0ng, version {%1} , codename (Reborn) for Minecraft: Bedrock Edition {%2} (protocol version {%3})
+pocketmine.server.info.extended=This server is running {%0} {%1}, version {%2} for Minecraft: Bedrock Edition {%3} (protocol version {%4})
 pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/dtcu0ng/UNWDS/README.md
-pocketmine.server.info=This server is running {%0} version {%1} codename (Reborn)
+pocketmine.server.info=This server is running {%0} version {%1}
 pocketmine.server.license={%0} is distributed under the LGPL License
 pocketmine.server.networkError=[Network] Stopped interface {%0} due to {%1}
 pocketmine.server.networkStart=Opening server on {%0}:{%1}
