Fix the plugins problem
added some newer PocketMine-MP commits.

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -1,4 +1,7 @@
-﻿; Language file compatible with Minecraft: Bedrock Edition identifiers
+﻿; UNWDS language file (English)
+; Language file compatible with Minecraft: Bedrock Edition identifiers
+; This language file only use in UNWDS, in some 3rd software or PocketMine-MP, this won't work as expected.
+; Supported UNWDS version: 2.0.1 RC2, 2.0.1 RC3 or above
 ;
 ; A message doesn't need to be there to be shown correctly on the client.
 ; Only messages shown in UNWDS itself need to be here
@@ -301,7 +304,7 @@ pocketmine.server.devBuild.error5=To download a stable build instead, visit {%0}
 pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
-pocketmine.server.info.extended=This server is running {%0} {%1}, version {%2} for Minecraft: Bedrock Edition {%3} (protocol version {%4})
+pocketmine.server.info.extended=This server is running {%0} {%1}, version {%2} for Minecraft: Bedrock Edition {%4} (protocol version {%5}) (PocketMine API version {%3})
 pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/dtcu0ng/UNWDS/README.md
 pocketmine.server.info=This server is running {%0} version {%1}
 pocketmine.server.license={%0} is distributed under the LGPL License
