--- a/src/pocketmine/lang/locale/vie.ini
+++ b/src/pocketmine/lang/locale/vie.ini
@@ -1,6 +1,8 @@
 ; UNWDS language file (Vietnamese)
 ; Translator: dtcu0ng
 ; Language file compatible with Minecraft: Bedrock Edition identifiers
+; This language file only use in UNWDS, in some 3rd software or PocketMine-MP, this won't work as expected.
+; Supported UNWDS version: 2.0.1 RC2, 2.0.1 RC3 or above
 ;
 ; A message doesn't need to be there to be shown correctly on the client.
 ; Only messages shown in UNWDS itself need to be here
@@ -296,7 +298,7 @@ pocketmine.server.devBuild.error5=Để tải các bản xây dựng ổn địn
 pocketmine.server.devBuild.warning1=Bạn đang sử dụng phiên bản xây dựng THỬ NGHIỆM của {%0}
 pocketmine.server.devBuild.warning2=Phiên bản API này có thể không hoàn chỉnh. Các plugin chạy được trên API này có thể không chạy được trên các phiên bản khác.
 pocketmine.server.devBuild.warning3=Phiên bản xây dựng thử nghiệm có thể sẽ có lỗi không thể lường trước được, có thể nó sẽ làm hỏng thế giới, dữ liệu và các plugin hoạt động không đúng cách.
-pocketmine.server.info.extended=Server này đang chạy {%0} {%1}, phiên bản {%2} cho Minecraft: Bedrock Edition {%3} (phiên bản protocol {%4})
+pocketmine.server.info.extended=Server này đang chạy {%0} {%1}, phiên bản {%2} cho Minecraft: Bedrock Edition {%4} (phiên bản protocol {%5}) (phiên bản PocketMine API {%3})
 pocketmine.server.donate = Cảm ơn bạn đã sử dụng UNWDS, bạn có thể đóng góp tại : github.com/dtcu0ng/UNWDS/README.md
 pocketmine.server.info = Server này đang chạy {%0} {%1}
 pocketmine.server.start = Đang chạy UNWDS dành cho Minecraft: Bedrock Edition phiên bản {%0}
