--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -306,7 +306,7 @@ pocketmine.server.devBuild.warning1=You are running a {%0} DEVELOPMENT build.
 pocketmine.server.devBuild.warning2=The API for this version may not be finalized. Plugins which run on this build may not work on other builds with the same API version.
 pocketmine.server.devBuild.warning3=The build may have bugs, crash, corrupt your data, or break your plugins.
 pocketmine.server.info.extended=This server is running {%0} {%1}, version {%2} for Minecraft: Bedrock Edition {%4} (protocol version {%5}) (PocketMine API version {%3})
-pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: github.com/dtcu0ng/UNWDS/README.md
+pocketmine.server.donate=Thank you for using UNWDS, you can find ways to contribute/donate in: https://github.com/UnnamedNetwork/UNWDS/README.md
 pocketmine.server.info=This server is running {%0} version {%1}
 pocketmine.server.license={%0} is distributed under the LGPL License
 pocketmine.server.networkError=[Network] Stopped interface {%0} due to {%1}
