Removed unnecessary strings

--- a/src/pocketmine/lang/locale/eng.ini
+++ b/src/pocketmine/lang/locale/eng.ini
@@ -181,7 +181,7 @@ potion.wither=Wither
 tile.bed.noSleep=You can only sleep at night
 tile.bed.occupied=This bed is occupied
 tile.bed.tooFar=Bed is too far away
-pocketmine.mask.info=Emulating: {%0} version {%1}
+unwds.mask.info=Emulating: {%0} version {%1}
 
 ; -------------------- PocketMine language strings, only for console --------------------
 pocketmine.command.alias.illegal=Could not register alias '{%0}' because it contains illegal characters
