--- a/src/pocketmine/lang/locale/vie.ini
+++ b/src/pocketmine/lang/locale/vie.ini
@@ -177,7 +177,7 @@ potion.weakness=Yếu
 potion.wither=Khô Héo
 tile.bed.noSleep=Bạn chỉ có thể ngủ vào ban ngày
 tile.bed.tooFar=Giường ở quá xa
-pocketmine.mask.info=Đang giả lập: {%0} phiên bản {%1}
+unwds.mask.info=Đang giả lập: {%0} phiên bản {%1}
 
 ; -------------------- PocketMine language strings, only for console --------------------
 pocketmine.command.alias.illegal=Không thể đăng kí '{%0}' bởi vì nó chứa ký tự hợp lệ
